--- a/Nettside/WebContent/JavaEksempler/Variabler.html
+++ b/Nettside/WebContent/JavaEksempler/Variabler.html
@@ -15,12 +15,12 @@
 		<h1>Variabler</h1>
 		<p>For å utvide Hello World kan vi bruke noe som kalles en variabel.<br>
 			Variabler inneholder forskjellige typer verdier, som tall, tekst, sannhet.<br>
-			Til å begynne med kan vi bruke noe som kalles en String.<br>
-			"String" inne holder tekst og vi kan gi en String til metoden System.out.println() istedenfor teksten i seg selv.<br>
+			Til å begynne med kan vi bruke noe som kalles en streng.<br>
+			Variabeltypen "String" inneholder tekst og vi kan gi en String til metoden System.out.println() istedenfor teksten i seg selv.<br>
 			Vi deklarerer(lager) en String variabel slik:<br></p>
 		<div class=code><pre>String helloWorldTekst;</pre></div>
 		<p>Her er String typen og helloWorldTekst navnet til variabelen.<br>
-			Vi bruker også ikke stor bokstav for det første ordet i navnet, dette er bare slik det vanligvis blir gjort.<br>
+			Vi bruker ikke stor bokstav for det første ordet i navnet, dette er bare slik det vanligvis blir gjort.<br>
 			Vi kan også gi String en verdi, slik:<br></p>
 		<div class=code><pre>helloWorldTekst = "Hello World!";</pre></div>
 		<p>Nå inneholder denne variabelen helloWorldTekst akkurat den samme teksten som vi ga til System.out.println() i det siste eksempelet.<br>
@@ -66,8 +66,8 @@ public class HelloWorld {
 			Dette er ikke veldig spennende, men variabler er veldig praktiske.<br>
 			De kan holde på en verdi som blir brukt mange ganger, og du vil bare trenge å endre verdien på et sted for at alt som bruker verdien vil bruke den nye verdien.<br>
 			Det er også viktig å huske hvorfor det heter en variabel, du kan endre verdien.<br>
-			Etter du har skrevet ut teksten i helloWorldTekst kan du gi helloWorldTekst en ny verdi og skrive ut en ny linje.<br>
-			Slik som dette:</p>
+			Etter du har skrevet ut teksten i helloWorldTekst kan du gi helloWorldTekst en ny verdi og skrive ut en ny linje, som vist nedenfor.<br>
+			</p>
 			<div class=code><pre>
 package pakke;
 
