La til forside for webeksempler og oppdaterte referanser

--- a/Nettside/WebContent/JavaEksempler/Kalender.html
+++ b/Nettside/WebContent/JavaEksempler/Kalender.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
+  		<div class="menu_element"><a href="../WebEksempler/WebForside.html">Alle Webeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
@@ -846,7 +847,7 @@ for(int e : list) {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Flerdimensjonelle_Tabeller.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="FeilHandtering.html">Neste Eksempel</a></div>
 	</div>
 </body>
