--- a/Nettside/WebContent/JavaEksempler/While-Lokker.html
+++ b/Nettside/WebContent/JavaEksempler/While-Lokker.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
@@ -93,7 +93,7 @@ showMessageDialog(null, "Liste:\n" + liste);
 <div class=code><pre>
 package pakke;
 
-import static javax.swing.JOptionPane.*;
+import static javax.swing.JOptionPane.*;	
 
 public class WhileLokker {
 
@@ -125,7 +125,7 @@ public class WhileLokker {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Switch.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="DoWhile.html">Neste Eksempel</a></div>
 	</div>
 </body>
