--- a/Nettside/WebContent/JavaEksempler/DoWhile.html
+++ b/Nettside/WebContent/JavaEksempler/DoWhile.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
+  		<div class="menu_element"><a href="../WebEksempler.html">Alle Webeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
@@ -152,7 +153,7 @@ public class DoWhile {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="While-Lokker.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="Tabeller.html">Neste Eksempel</a></div>
 	</div>
 </body>
