--- a/Nettside/WebContent/JavaEksempler/EgneMetoder.html
+++ b/Nettside/WebContent/JavaEksempler/EgneMetoder.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaEksempler.html">Alle Javaeksempler</a></div>
+<div class="menu_element"><a href="../WebEksempler/WebForside.html">Alle Webeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	</div>
@@ -92,7 +93,7 @@ System.out.println(EksterneMetoder.oppHoy(5, 3));
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Tabeller.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="Objekter.html">Neste Eksempel</a></div>
 	</div>
 </body>
