--- a/Nettside/WebContent/JavaEksempler/Flerdimensjonelle_Tabeller.html
+++ b/Nettside/WebContent/JavaEksempler/Flerdimensjonelle_Tabeller.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
+  		<div class="menu_element"><a href="../WebEksempler/WebForside.html">Alle Webeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
@@ -81,7 +82,7 @@ lagHendelse();
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Objekter.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="Kalender.html">Neste Eksempel</a></div>
 	</div>
 </body>
