--- a/Nettside/WebContent/JavaEksempler/If.html
+++ b/Nettside/WebContent/JavaEksempler/If.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
@@ -122,7 +122,7 @@ else if (tall &lt; hemmeligTall) {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Kommentarer.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="For.html">Neste Eksempel</a></div>
 	</div>
 </body>
