--- a/Nettside/WebContent/JavaEksempler/JavaForside.html
+++ b/Nettside/WebContent/JavaEksempler/JavaForside.html
@@ -8,7 +8,8 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
+  		<div class="menu_element"><a href="../WebEksempler/WebForside.html">Alle Webeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class="container">
@@ -26,6 +27,8 @@
 			<div class="example_square"><a href="EgneMetoder.html">Egne Metoder</a></div>
 			<div class="example_square"><a href="Objekter.html">Objekter</a></div>
 			<div class="example_square"><a href="Flerdimensjonelle_Tabeller.html">Flerdimensjonelle Tabeller</a></div>
+			<div class="example_square"><a href="Kalender.html">Filer</a></div>
+			<div class="example_square"><a href="FeilHandtering.html">Feilhåndtering</a></div>
 		</div>
 	</div>
 </body>
