--- a/Nettside/WebContent/JavaEksempler/Objekter.html
+++ b/Nettside/WebContent/JavaEksempler/Objekter.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
-  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
@@ -150,7 +150,7 @@ System.out.println(youtube.likURL(wikipedia));
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="EgneMetoder.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
   		<div class="bottom_menu_element"><a href="Flerdimensjonelle_Tabeller.html">Neste Eksempel</a></div>
 	</div>
 </body>
