--- a/Nettside/WebContent/JavaEksempler/FeilHandtering.html
+++ b/Nettside/WebContent/JavaEksempler/FeilHandtering.html
@@ -13,7 +13,7 @@
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
-		<h1>unntak Håndtering</h1>
+		<h1>Unntakshåndtering</h1>
 		<p>I forrige eksempel(Kalenderen) hadde vi en lagre metode som brukte unntakshåndtering:</p>
 <div class=code><pre>
 public void lagre() throws Exception {
